# ai-evals-talk

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: eval-gate.yml
agent/: agent.py  main.py  publish.py  tools.py
evals/: BASELINE_AGENT  baseline-results.json  ci_gate.py  dataset-ci.json  dataset-v1.jsonl  run_local.py
infra/: 01-subscription-prep.sh  02-foundry-setup.sh  03-rbac.sh  04-ci-oidc.sh  05-inventory-appservice.sh  06-rotate-appinsights.sh
inventory-service/: app.py
runbook/: ask.py  degrade.sh  drive_incident.py  show_trace.py  verdict.py
