[project]
name = "evals-demo"
version = "0.1.0"
description = "Experts Live 2026 - Green CI, broken production"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "azure-identity",
    "azure-ai-projects",
    "azure-ai-agents",
    "azure-monitor-opentelemetry",
    "azure-ai-evaluation",
    "opentelemetry-instrumentation-openai-v2>=2.4b0",
]

[tool.uv]
package = false
